Move ROEngines partmodules into ROLib... again

--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -90,10 +90,11 @@
     <Compile Include="DebugTools\DrawTools.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Modules\ModuelROPayload.cs" />
+    <Compile Include="Modules\ModuleRORCS.cs" />
     <Compile Include="Modules\ModuleROSolar.cs" />
     <Compile Include="Modules\ModuleROTank_KorolevCross.cs" />
     <Compile Include="Modules\ROLAnimateEngineHeat.cs" />
-    <Compile Include="Modules\ROLDeployableEngine.cs" />
+    <Compile Include="Modules\ROEDeployableEngine.cs" />
     <Compile Include="ROSolar\SolarTechLimit.cs" />
     <Compile Include="UI\DimensionWindow.cs" />
     <Compile Include="UI\AbstractWindow.cs" />
